added links in the leaderboard javadoc