@@ -2,16 +2,14 @@ package model;
 
 import java.io.*;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
-/**model.
- *  represents the 'leaderboard' object. it contains an inner class, a 'LeaderboardEntry' class.
+/**model,
+ *  represents the 'leaderboard' object. it contains an inner class, a {@link LeaderboardEntry} class.
  * the leaderboard is used to track the top 10 leading scores with name, and points.
  * it follows the singleton pattern, so only a single instance of the leaderboard is created.
- * get the leaderboard instance via getInstance().
- *
- * the leaderboard loads the leaderboard.txt file, converts them into a List<LeaderBoardEntry> of size 10.
+ * get the leaderboard instance via {@link #getInstance()}.
+ * the leaderboard loads the leaderboard.txt file, converts them into a List<LeaderBoardEntry> of size 10 {@link #leaderboardEntries} .
  * each leaderboard entry has a name, and a score.
  * it the saves the players score (if high enough) when the player extracts.
  */
@@ -20,17 +18,17 @@ public class Leaderboard {
 
     /**
      * represents a leaderboard entry for when a player successfully extracts.
-     * it contains 2 fields initialized in the constructor, a 'String name ' and a 'int score'.
+     * it contains 2 fields initialized in the constructor, a 'String {@link #name} ' and an 'int {@link #score}'.
      */
     public static class LeaderboardEntry {           // this is to store name - score pairs
         /**
          * represents the name of the player
          */
-        String name;
+        private String name;
         /**
          * represents the total points scored by the player
          */
-        int score;
+        private int score;
 
         /**
          * @param name name of the player
@@ -42,7 +40,7 @@ public class Leaderboard {
         }
 
         /**
-         * @return returns [name] + " " + [score]
+         * @return returns [{@link #name}] + " " + {@link #score}
          */
         @Override
         public String toString(){
@@ -58,7 +56,7 @@ public class Leaderboard {
     /**
      * list of leaderboard entries
      */
-    private final List<LeaderboardEntry> leaderbordEntries;
+    private final List<LeaderboardEntry> leaderboardEntries;
 
     /**
      * name of the leaderboard .txt file used to store the leaderboard scores
@@ -67,16 +65,16 @@ public class Leaderboard {
 
 
     /**
-     * constructor, initializes the list leaderboardEntries(size 10)
-     * calls loadLeaderBoard method when it is first created
+     * constructor, initializes the list leaderboardEntries(size 10) ({@link #leaderboardEntries}
+     * calls {@link #loadLeaderBoard()} method when it is first created
      */
     private Leaderboard() {
-        this.leaderbordEntries = new ArrayList<>(10);
+        this.leaderboardEntries = new ArrayList<>(10);
         loadLeaderBoard();      //load the leaderboard .txt file contents
     }
 
     /**
-     * populates the leaderboardEntries with LeaderboardEntry.
+     * populates the {@link #leaderboardEntries} with {@link LeaderboardEntry}.
      * a leaderboard entry contains name of the player and the pts scored
      */
     private void loadLeaderBoard() {
@@ -88,7 +86,7 @@ public class Leaderboard {
                 try {
                     String name = parts[0];
                     int score = Integer.parseInt(parts[1]);
-                    leaderbordEntries.add(new LeaderboardEntry(name, score));
+                    leaderboardEntries.add(new LeaderboardEntry(name, score));
                 }
                 catch (NumberFormatException e) {
                     throw new RuntimeException(e);
@@ -102,17 +100,17 @@ public class Leaderboard {
     }
 
     /**
-     * adds the player score into leaderboardEntries ONLY if it is higher than the last one.
+     * adds the player score into {@link #leaderboardEntries} ONLY if it is higher than the last one.
      * sorts right after in descending order.
-     * calls saveLeaderboard() to save it into the leaderboard.txt file.
+     * calls {@link #saveLeaderboard()} to save it into the leaderboard.txt file.
      * @param name name of the player
      * @param score total pts of the player
      */
     public void addScore(String name, int score){
         //only add the score if it is higher than the last one
-        if (score > leaderbordEntries.get(leaderbordEntries.size() -1).score) {
-            leaderbordEntries.set(leaderbordEntries.size() - 1, new LeaderboardEntry(name, score)); //replace the lowest score
-            Collections.sort(leaderbordEntries, (aGuy, bGuy) -> Integer.compare(bGuy.score, aGuy.score));  //sort in reverse order (descending)
+        if (score > leaderboardEntries.getLast().score) {
+            leaderboardEntries.set(leaderboardEntries.size() - 1, new LeaderboardEntry(name, score)); //replace the lowest score
+            leaderboardEntries.sort((aGuy, bGuy) -> Integer.compare(bGuy.score, aGuy.score));  //sort in reverse order (descending)
 
             saveLeaderboard();
         }
@@ -120,14 +118,14 @@ public class Leaderboard {
 
     /**
      * saves the player score into the leaderboard .txt file
-     * it is called automatically when a score gets added via addScore()
+     * it is called automatically when a score gets added via {@link #addScore(String name, int score)}
      */
     private void saveLeaderboard() {    //saves all the leaderboard scores
         try(PrintWriter printWriter = new PrintWriter(new FileWriter(LEADERBOARD_FILENAME))){
-            for (LeaderboardEntry entry : leaderbordEntries) {
-                printWriter.println(entry);       //overwrite he leaderboard .txt file with the current ones
+            for (LeaderboardEntry entry : leaderboardEntries) {
+                printWriter.println(entry);       //overwrites the leaderboard .txt file with the current ones
             }
-            System.out.println("[Leaderboard][saveLeaderboard()] Saved leaderboard entry" + leaderbordEntries);
+            System.out.println("[Leaderboard][saveLeaderboard()] Saved leaderboard entry" + leaderboardEntries);
         }
         catch (IOException e){
             e.printStackTrace();
@@ -136,10 +134,10 @@ public class Leaderboard {
 
 
     /**
-     * @return returns leaderboardEntries list
+     * @return returns {@link #leaderboardEntries} list
      */
-    public List<LeaderboardEntry> getLeaderbordEntries() {
-        return leaderbordEntries;
+    public List<LeaderboardEntry> getLeaderboardEntries() {
+        return leaderboardEntries;
     }
 
     /**
@@ -147,7 +145,7 @@ public class Leaderboard {
      */
     public List<String> getLeaderbordEntryNames() {
         List<String> names = new ArrayList<>();
-        for (LeaderboardEntry entry : leaderbordEntries) {
+        for (LeaderboardEntry entry : leaderboardEntries) {
             names.add(entry.name);
         }
         return names;
@@ -158,7 +156,7 @@ public class Leaderboard {
      */
     public List<Integer> getLeaderbordEntryScores() {
         List<Integer> scores = new ArrayList<>();
-        for (LeaderboardEntry entry : leaderbordEntries) {
+        for (LeaderboardEntry entry : leaderboardEntries) {
             scores.add(entry.score);
         }
         return scores;
